RESOLVED FIXED214845
Occasional crashes under PDFPlugin::createScrollbar and PDFPlugin::updateScrollbars
https://bugs.webkit.org/show_bug.cgi?id=214845
Summary Occasional crashes under PDFPlugin::createScrollbar and PDFPlugin::updateScro...
Tim Horton
Reported 2020-07-27 13:55:49 PDT
Occasional crashes under PDFPlugin::createScrollbar and PDFPlugin::updateScrollbars
Attachments
Patch (4.27 KB, patch)
2020-07-27 14:03 PDT, Tim Horton
no flags
Patch (4.25 KB, patch)
2020-07-27 14:16 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-07-27 14:03:54 PDT
Tim Horton
Comment 2 2020-07-27 14:03:56 PDT
Brady Eidson
Comment 3 2020-07-27 14:06:08 PDT
Comment on attachment 405309 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405309&action=review > Source/WebKit/ChangeLog:11 > + No new tests; timing is such that I can't reproduce without inserting > + intentional delays into the main thread hops, which is further than > + I'm willing to go for a test. Fair.
Tim Horton
Comment 4 2020-07-27 14:16:00 PDT
EWS
Comment 5 2020-07-27 14:57:20 PDT
Committed r264945: <https://trac.webkit.org/changeset/264945> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405311 [details].
Note You need to log in before you can comment on or make changes to this bug.